# tap-shortcut

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: constraints.txt  dynamic-publish.yaml  test.yml  update_openapi.yml
scripts/: update_openapi.py
tap_shortcut/: __init__.py  __main__.py  client.py  openapi.json  streams.py  tap.py
tests/: test_core.py  test_openapi.py
